<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:ignore="MissingPrefix"
android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jailbird.scorch.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:layout_centerInParent="true"
         android:layout_marginTop="0dp"
         android:src="@drawable/ic_account_circle_white_48dp"
         app:civ_border_color="#fff"
         app:civ_border_width="5dp"
         />

     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/profile_image"
         android:layout_alignEnd="@+id/profile_image"
         android:layout_alignRight="@+id/profile_image"
         android:layout_gravity="bottom|end"
         android:visibility="visible"
         app:fabSize="mini"
         android:layout_marginBottom="5dp"
         app:srcCompat="@drawable/ic_mode_edit_white_36dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/about_you"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your name"
        android:textColor="#000"
        app:met_baseColor="#000"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="20"
        app:met_primaryColor="?colorAccent" />
<ImageView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="#ccc"
    android:layout_marginBottom="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/interests_heading"/>

    <android.support.v7.widget.CardView
        android:id="@+id/interest_card"
        android:layout_width="200dp"

        android:layout_height="50dp"
android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">
            <ImageView
                android:id="@+id/interest_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/nightblr"
                android:alpha="1"
                android:visibility="gone"
                android:scaleType="centerCrop"/>
            <TextView
                android:id="@+id/interest_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_your_interests"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="20sp"
                android:shadowRadius="4"
                fontPath="fonts/Comfortaa-Bold.ttf"

                android:shadowColor="#000"
                android:layout_centerInParent="true"
                tools:ignore="MissingPrefix" />




        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/favorites_heading"/>
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:padding="0dp"
        android:layout_gravity="center_horizontal"
app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">
            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/nightblr"
                android:visibility="gone"
                android:alpha="1"
                android:scaleType="centerCrop"/>
            <TextView
                android:id="@+id/item_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_your_favorites"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:shadowRadius="4"
                fontPath="fonts/Comfortaa-Bold.ttf"

                android:shadowColor="#000"
                android:layout_centerInParent="true"
                tools:ignore="MissingPrefix" />




        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
